exception 수정